packages/parser/test/parser/E0113-object-expression.txt
a := Test{a: 1, b }
===== err =====
anonymous:1:18: ParseError: E0113 - Expected colon after object expression property name
1 | a := Test{a: 1, b }
  |                  ^
